# ChangeLog for media-fonts/cardo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/cardo/ChangeLog,v 1.1 2008/05/30 20:48:44 swegener Exp $

  30 May 2008; Sven Wegener <swegener@gentoo.org> ChangeLog:
  Add missing ChangeLog.
