@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/tibetan-machine-font/tibetan-machine-font-1.901.ebuild,v 1.1 2008/05/26 10:43:24 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/tibetan-machine-font/tibetan-machine-font-1.901.ebuild,v 1.2 2009/05/17 13:49:56 loki_val Exp $
 
 inherit font
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://gentoo/TibetanMachineUnicodeFont-${PV}.zip"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND="app-arch/unzip"
