@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/tibetan-machine-font
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/tibetan-machine-font/ChangeLog,v 1.1 2008/05/26 10:43:24 loki_val Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/tibetan-machine-font/ChangeLog,v 1.2 2009/05/17 13:49:56 loki_val Exp $
+
+  17 May 2009; Peter Alfredsen <loki_val@gentoo.org>
+  tibetan-machine-font-1.901.ebuild:
+  Keyword ~amd64
 
 *tibetan-machine-font-1.901 (26 May 2008)
 
