@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/cardo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/cardo/ChangeLog,v 1.1 2008/05/30 20:48:44 swegener Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/cardo/ChangeLog,v 1.2 2009/05/17 13:45:17 loki_val Exp $
+
+  17 May 2009; Peter Alfredsen <loki_val@gentoo.org> cardo-0.98.ebuild:
+  Keyword ~amd64
 
   30 May 2008; Sven Wegener <swegener@gentoo.org> ChangeLog:
   Add missing ChangeLog.
